--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,11 @@ project(tecalc LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic")
+if(MSVC)
+  set(CMAKE_CXX_FLAGS "/EHsc /W3")
+else()
+  set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic")
+endif()
 
 # use Catch2 unit testing framework
 Include(FetchContent)
